Change settings for Memliner.