@@ -11,29 +11,40 @@
 
 
 ### CMS Settings
--XX:+UseConcMarkSweepGC
--XX:+CMSParallelRemarkEnabled
--XX:SurvivorRatio=8
--XX:MaxTenuringThreshold=1
--XX:CMSInitiatingOccupancyFraction=75
--XX:+UseCMSInitiatingOccupancyOnly
--XX:CMSWaitDuration=10000
--XX:+CMSParallelInitialMarkEnabled
--XX:+CMSEdenChunksRecordAlways
+#-XX:+UseConcMarkSweepGC
+#-XX:+CMSParallelRemarkEnabled
+#-XX:SurvivorRatio=8
+#-XX:MaxTenuringThreshold=1
+#-XX:CMSInitiatingOccupancyFraction=75
+#-XX:+UseCMSInitiatingOccupancyOnly
+#-XX:CMSWaitDuration=10000
+#-XX:+CMSParallelInitialMarkEnabled
+#-XX:+CMSEdenChunksRecordAlways
 ## some JVMs will fill up their heap when accessed via JMX, see CASSANDRA-6541
--XX:+CMSClassUnloadingEnabled
+#-XX:+CMSClassUnloadingEnabled
 
 
 
 ### G1 Settings
 ## Use the Hotspot garbage-first collector.
-#-XX:+UseG1GC
+-XX:+UseG1GC
 #-XX:+ParallelRefProcEnabled
+
+-XX:-AlwaysPreTouch
 
 #
 ## Have the JVM do less remembered set work during STW, instead
 ## preferring concurrent GC. Reduces p99.9 latency.
+# Memliner -
+# Time spent on processing RemSet during STW GC.
+# Decreasing this value leads to more work finished in concurrent cycles.
+# The default value is 10.
 #-XX:G1RSetUpdatingPauseTimePercent=5
+
+# Memliner
+# Precent concurrent GC
+-XX:G1RSetUpdatingPauseTimePercent=20
+
 #
 ## Main G1GC tunable: lowering the pause target will lower throughput and vise versa.
 ## 200ms is the JVM default and lowest viable setting
@@ -43,15 +54,28 @@
 ## Optional G1 Settings
 # Save CPU time on large (>= 16GB) heaps by delaying region scanning
 # until the heap is 70% full. The default in Hotspot 8u40 is 40%.
-#-XX:InitiatingHeapOccupancyPercent=70
+# Memliner  
+# When the memory usage of Old gen reaches the threshold here,
+# a concurrent marking will be triggered.
+-XX:-G1UseAdaptiveIHOP
+#-XX:InitiatingHeapOccupancyPercent=40
+
+# Memliner
+# Simulate the disable GC
+# Trigger a concurrent GC to relcaim the old gen and prevent the Full-GC
+-XX:InitiatingHeapOccupancyPercent=85
 
 # For systems with > 8 cores, the default ParallelGCThreads is 5/8 the number of logical cores.
 # Otherwise equal to the number of cores when 8 or less.
 # Machines with > 10 cores should try setting these to <= full cores.
-#-XX:ParallelGCThreads=16
+-XX:ParallelGCThreads=16
 # By default, ConcGCThreads is 1/4 of ParallelGCThreads.
 # Setting both to the same value can reduce STW durations.
 #-XX:ConcGCThreads=16
+-XX:ConcGCThreads=4
+
+-Xms32g
+-Xmx32g
 
 
 ### JPMS
@@ -85,6 +109,7 @@
 # Notes for Java 8 migration:
 #
 # -XX:+PrintGCDetails                   maps to -Xlog:gc*:... - i.e. add a '*' after "gc"
+-XX:+PrintGCDetails
 # -XX:+PrintGCDateStamps                maps to decorator 'time'
 #
 # -XX:+PrintHeapAtGC                    maps to 'heap' with level 'trace'
